fixed unnecessary gap between sections issue

--- a/src/pages/TravelBlog/BloggersJourney/BloggersJourney.module.css
+++ b/src/pages/TravelBlog/BloggersJourney/BloggersJourney.module.css
@@ -1,5 +1,4 @@
 .wrapper {
-    margin: 60px 0;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -57,6 +56,7 @@
     .container {
         display: grid;
         grid-template-columns: repeat(3,490px);
+        grid-template-rows: none;
         grid-gap:5px;
         align-items: center;
         justify-content: center;
