--- a/src/pages/TravelBlog/WhyGlobuzzer/WhyGlobuzzer.module.css
+++ b/src/pages/TravelBlog/WhyGlobuzzer/WhyGlobuzzer.module.css
@@ -2,11 +2,11 @@
     display: grid;
     align-items: center;
     justify-content: center;
-    margin-top: 70px;
     background-color: #ffffff;
     z-index: 10;
     padding-bottom: 50px;
     overflow: hidden;
+    padding-top: 80px;
 }
 
 .description {
